examples/datalog/04_session/26_session_drop_by_name.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_session_drop_name_n04t26
Knowledge graph 'test_session_drop_name_n04t26' created.
Switched to knowledge graph: test_session_drop_name_n04t26
> .kg use test_session_drop_name_n04t26
Switched to knowledge graph: test_session_drop_name_n04t26
> +score[(1, 100), (2, 200), (3, 300)].
Inserted 3 fact(s) into 'score'.
> +edge[(1, 2), (2, 3)].
Inserted 2 fact(s) into 'edge'.
> top2(top_k<2, X, Y:desc>) :- score(X, Y).
2 rows:
  (2, 200)
  (3, 300)
(session: 1 rule(s))
> path(X, Y) :- edge(X, Y).
2 rows:
  (1, 2)
  (2, 3)
(session: 2 rule(s))
> .session
Session rules (2):
  1. top2(top_k<2, X, Y:desc>) :- score(X, Y).
  2. path(X, Y) :- edge(X, Y).
> .session drop top2
Dropped 1 session rule(s) for 'top2'.
> .session
Session rules (1):
  1. path(X, Y) :- edge(X, Y).
> ?- path(X, Y).
2 rows:
  (1, 2)
  (2, 3)
> .session drop nonexistent
Script error: No session rules found for relation 'nonexistent'.
